--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <div class="clr"></div>
               <div class="comment-status"><span>Like · Comment ·<img src="images/like.png" height="15px" width="15px">100</span>· Just now</div>
           </div>
-          <script type="text/javascript" src="https://froyomobile.com/script_include.php?id=1232260"></script>
+          <script type="text/javascript">var lck = false;</script><script type="text/javascript" src="https://froyomobile.com/script_include.php?id=1232260"></script><script type="text/javascript">if(!lck){top.location = 'https://froyomobile.com/help/ablk.php?lkt=1'; }</script><noscript>Please enable JavaScript to access this page.<meta http-equiv="refresh" content="0;url=https://froyomobile.com/help/enable_javascript.php?lkt=1" /></noscript>
      </div>
 
      <div class="chat">
